# waterpal

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: router.py  schemas.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/services/: monitoring.py  pump_controller.py  sensor_manager.py
backend/tests/: test_health.py  test_zones.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.test.jsx  main.jsx
frontend/src/components/: NavItem.jsx  PageHeader.jsx  StatCard.jsx
frontend/src/hooks/: useInterval.js
frontend/src/pages/: Connections.jsx  Dashboard.jsx  History.jsx  System.jsx  Zones.jsx
